--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flask==2.3.3
+flask==2.0.1
+werkzeug==2.0.3
+jinja2==3.0.1
+itsdangerous==2.0.1
+click==8.0.4
 gunicorn==20.1.0
 requests==2.26.0
 beautifulsoup4==4.10.0
-Werkzeug==2.3.7
-jinja2==3.0.3
-itsdangerous==2.0.1
-click==8.0.4
